# genai_template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/genai_template/api/: main.py
src/genai_template/api/routes/: __init__.py  run.py
src/genai_template/api/schemas/: run.py
src/genai_template/core/: config.py  context.py  logging.py
src/genai_template/llm/: __init__.py  base.py  call.py  factory.py  message_thread.py  router.py
src/genai_template/llm/providers/: anthropic.py  azure.py  gemini.py  openai.py
src/genai_template/observability/: langfuse.py
src/genai_template/observability/eval/: runner.py
src/genai_template/orchestration/: graph.py  runtime.py  state.py
src/genai_template/orchestration/nodes/: example_node.py  llm_node.py  router.py
src/genai_template/prompts/: registry.py
src/genai_template/prompts/fallback/: example.xml
tests/: conftest.py  test_yaml_eval.py  test_yaml_integration.py  test_yaml_unit.py
tests/configs/eval/: test_basic_eval.yaml
tests/configs/integration/: test_api_run_no_llm.yaml  test_api_run_with_llm.yaml  test_health_endpoint.yaml  test_pipeline_no_llm.yaml  test_pipeline_with_llm.yaml
tests/configs/unit/: test_example_node.yaml  test_router_end_path.yaml  test_router_llm_path.yaml
tests/eval/: test_eval.py
tests/framework/: config_loader.py  config_models.py  executor.py  field_checker.py  llm_mocker.py  service_mocker.py
tests/integration/: test_api.py  test_graph.py
(+1 files in other folders)
